name:
  fiber-bundles
version:
  0.1.0
synopsis:
  Fiber bundles and related algebraic structures
description:
  This package defines a @FiberBundle@ class, and others that allows the
  manipulation of types as fiber bundles whose fibers have an algebraic
  structure.
license:
  BSD3
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    Data.FiberBundle
  build-depends:
    base >= 4.5 && < 4.13,
    containers,
    groups
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  default-language:
    Haskell2010
