name:
  fiber-bundles
version:
  0.1.0
synopsis:
  Fiber bundles and related algebraic structures.
description:
  This package defines @FiberBundle@s with and without algebraic structures on
  its fibers. It also defines a data structure for fiber bundle sections, which
  have a more familiar algebraic structure.
license:
  BSD3
license-file:
  LICENSE
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
category:
  Algebra, Math
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    Data.FiberBundle
    Data.FiberBundle.Section
    Data.FiberBundle.Trivial
  build-depends:
    base >= 4.5 && < 4.13,
    containers,
    groups
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  default-language:
    Haskell2010
